--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
+    "seed": "node scripts/seedIdeas.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nelson Diaz",
