--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jose": "^6.1.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1"
   }
